--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>Ejercicios Javascript</title>
   </head>
+  
   <body>
-    <h1 id="encabezado">Ejercicios </h1>
+    <h1 id="encabezado">Ejercicios</h1>
     <ul class="list-group">
-        <li class="list-group-item"><a href="ejercicio1.html"> Ejercicio #1</a></li>
+        <li class="list-group-item">Ejercicio #1</li>
         <li class="list-group-item">Ejercicio #2</li>
         <li class="list-group-item">Ejercicio #3</li>
         <li class="list-group-item">Ejercicio #4</li>
